--- a/style.css
+++ b/style.css
@@ -1,7 +1,28 @@
-table{
-    border:1px black solid;
+*{
+    background-color: rgb(96, 96, 224);
+    color: rgb(247, 236, 236);
 }
 
-tr{
+header{
+    align-self: center;
+}
+
+.image{
+    /* max-width: 1em;
+    max-height: 1em;
+    display: block; */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border-radius: 30px;
+}
+
+a:hover{
+    color: rgb(4, 4, 44);
+    font-size: larger;
+}
+
+table{
     border:1px black solid;
 }
